--- a/energy/templates/energy/article.html
+++ b/energy/templates/energy/article.html
@@ -84,7 +84,7 @@
 {#                <div class="blog-post">#}
 {#                    <h2>Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.</h2>#}
 {#                    <h4>Posted by <a href="#">admin</a> on 24th January 2015 </h4>#}
-{#                    <p>#}
+{#                is_authenticated    <p>#}
 {#                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.#}
 {#Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.#}
 {#Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.#}
