--- a/energy/templates/energy/forum.html
+++ b/energy/templates/energy/forum.html
@@ -10,7 +10,7 @@
 					<div class="aw-mod aw-notification-box hide" id="index_notification">
 						<div class="mod-head common-head">
 							<h2>
-								<span class="pull-right"><a href="http://wenda.golaravel.com/setting/privacy/#notifications" class="text-color-999"><i class="icon icon-setting"></i> 通知设置</a></span>
+								<span class="pull-right"><a href="#" class="text-color-999"><i class="icon icon-setting"></i> 通知设置</a></span>
 								<i class="icon icon-bell"></i>新通知<em class="badge badge-important" name="notification_unread_num"></em>
 							</h2>
 						</div>
@@ -19,7 +19,7 @@
 						</div>
 						<div class="mod-footer clearfix">
 							<a href="javascript:;" onclick="AWS.Message.read_notification(false, 0, false);" class="pull-left btn btn-mini btn-gray">我知道了</a>
-							<a href="http://wenda.golaravel.com/notifications/" class="pull-right btn btn-mini btn-success">查看所有</a>
+							<a href="#" class="pull-right btn btn-mini btn-success">查看所有</a>
 						</div>
 					</div>
 					<!-- end 新消息通知 -->
@@ -41,14 +41,14 @@
 
                                 {% for message in messages %}
 <div class="aw-item " data-topic-id="299,">
-	<a class="aw-user-name hidden-xs" data-id="613" href="#" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-max-img.png" alt="" /></a>	<div class="aw-question-content">
+	<a class="aw-user-name hidden-xs" data-id="613" href="#" rel="nofollow"><img src="" alt="" /></a>	<div class="aw-question-content">
 		<h4>
 						<a href=" {% url 'energy:detail' message.id%}">{{ message.title }}</a>
 					</h4>
 				<div class="pull-right hidden-xs contribute">
 			<span class="pull-right text-color-999">贡献</span>
 		    		    <a class="aw-user-name" data-id="29" href="#" rel="nofollow">信息的图片</a>
-		    		    <a class="aw-user-name" data-id="5015" href="http://wenda.golaravel.com/people/%E5%94%AF%E7%BE%8E%E8%A1%97%E6%8B%8D" rel="nofollow"><img src="http://wenda.golaravel.com/static/common/avatar-mid-img.png" alt="" /></a>
+		    		    <a class="aw-user-name" data-id="5015" href="#" rel="nofollow"><img src="" alt="" /></a>
 		    		</div>
 
 		<p>
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 						<div class="mod-footer">
-							<div class="page-control"><ul class="pagination pull-right"><li class="active"><a href="javascript:;">1</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-2">2</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-3">3</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-4">4</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-2">&gt;</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-53">&gt;&gt;</a></li></ul></div>						</div>
+							<div class="page-control"><ul class="pagination pull-right"><li class="active"><a href="javascript:;">1</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-2">2</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-3">3</a></li><li><a href="http://wenda.golaravel.com/sort_type-new__day-0__is_recommend-0__page-4">4</a></li><li><a href="#">&gt;</a></li><li><a href="#">&gt;&gt;</a></li></ul></div>						</div>
 					</div>
 				</div>
 
