--- a/energy/static/energy/css/new_1.css
+++ b/energy/static/energy/css/new_1.css
@@ -74,7 +74,7 @@
 
     /* Carousel base class */
     .carousel {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
 
     .carousel .container {
