--- a/energy/templates/energy/forum.html
+++ b/energy/templates/energy/forum.html
@@ -47,7 +47,7 @@
                                                     src="" alt=""/></a>
                                             <div class="aw-question-content">
                                                 <h4>
-                                                    <a href=" {% url 'detail' message.id %}">{{ message.title }}</a>
+                                                    <a href=" {% url 'energy:detail' message.id %}">{{ message.title }}</a>
                                                 </h4>
                                                 <div class="pull-right hidden-xs contribute">
                                                     <span class="pull-right text-color-999">贡献</span>
