--- a/energy/templates/energy/index.html
+++ b/energy/templates/energy/index.html
@@ -33,7 +33,7 @@
                   {% endif %}
               </h2>
               <p class="h3"> {{messge.content }} </p>
-              <p><a class="btn" href="{% url 'detail' messge.id %}">更多 &raquo;</a></p>
+              <p><a class="btn" href="{% url 'energy:detail' messge.id %}">更多 &raquo;</a></p>
             </div><!--/span-->
               {% endfor %}
           </div><!--/row-->
